# upvote-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  debian.Dockerfile  docker-compose.yml
migrations/2024-10-29-000752_create_profiles/: down.sql  up.sql
migrations/2024-10-29-194611_create_reviews/: down.sql  up.sql
src/: lib.rs  schema.rs
src/models/: mod.rs  profile.rs  review.rs
src/routes/: profile.rs  review.rs
src/tests/: mod.rs
src/tests/routes/: mod.rs  profile.rs
src/tests/routes/profile/: helpers.rs  mod.rs  test_profile.rs
src/tests/routes/review/: helpers.rs  mod.rs  test_review.rs
